Updated CSS to fix word break on mobile

--- a/api/public/js/blather/src/components/item/v1/style.scss
+++ b/api/public/js/blather/src/components/item/v1/style.scss
@@ -63,6 +63,7 @@
 
         .description {
             white-space: pre-line;
+            word-break: break-all;
 
             span {
                 color: $black;
